--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             <div class="v-two"></div>
             <div class="v-three"></div>
         </a>
-        <div class="logo"><a href="#"><img src="images/Logo(Stack overflow).png" alt="Stack Overflow"></a></div>
+        <div class="logo"><a href="#"><img src="Logo(Stack overflow).png" alt="Stack Overflow"></a></div>
         <ul class="list1">
             <li class="left"><a href="#">Our products</a></li>
             <li class="left"><a href="#">Our company</a></li>
@@ -38,7 +38,7 @@
     </div>
     <div class="container-2">
         <div class="image-1">
-            <img src="/stackoverflow/images/stackoverflow.jpg" alt="Random colourful people">
+            <img src="stackoverflow.jpg" alt="Random colourful people">
         </div>
         <div class="para">
             <p >Who we are</p>
